# FreeAutotune

./: LICENSE  README.md
pitch/: Cargo.toml  doc.sh  transpose_all.sh
pitch/resources/: generate_pure_sound.sh  notes
pitch/resources/outputs/speech_transformation/: Malala_1024_256.wav_spectrum  Malala_2048_1024.wav_spectrum  Malala_2048_256.wav_spectrum  Malala_2048_512.wav_spectrum
pitch/resources/test_results/: results.org
pitch/resources/usage/: usage_pitch_transposer.txt  usage_quality_checker.txt
pitch/src/: audio.rs  config.rs  convert.rs  lib.rs
pitch/src/audio/: audio_clip.rs
pitch/src/config/: ptconfig.rs  qcconfig.rs
