[package]
name = "pitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav = "1.0.0"
file-format = "0.12"
num-complex = "0.4"
rustfft = "6.1.0"
cpal = "0.15.0"
clap = {version = "4.1.1", features = ["derive"]}
eyre = "0.6.8"
ctrlc = "3.2.2"
color-eyre = "0.6.1"
chrono = "0.4.19"
hound = "3.4.0"
symphonia = {version = "0.5.0", features = ["isomp4", "mp3", "aac"] }
log = "0.4.17"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"] }
